<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('game_store', function (Blueprint $table) {
            $table->foreignId('game_id')->constrained()->cascadeOnDelete();
            $table->foreignId('store_id')->constrained('stores')->cascadeOnDelete();
            $table->string('url'); // enlace al juego en esa tienda
            $table->timestamps();
            $table->unique(['game_id', 'store_id']);
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('game_store');
    }
};
